Patha 2nd  build font add

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Preloader -->
